# AppTrackr

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release-windows.yml
apptrackr/: __init__.py  __main__.py
apptrackr/core/: events.py  idle.py  process_watch.py  tracker.py
apptrackr/data/: db.py  export.py  queries.py  rollup.py  schema.sql
apptrackr/game/: economy.py  state.py
apptrackr/rewards/: engine.py  rules.py
apptrackr/ui/: main.py  theme.py
apptrackr/ui/views/: app_detail.py  apps_view.py  calendar_view.py  dashboard.py  rewards_view.py  settings_view.py  village_view.py
apptrackr/ui/widgets/: components.py
apptrackr/updater/: apply.py  check.py  manifest.py
packaging/: apptrackr.spec  installer.iss
