[project]
name = "apptrackr"
version = "1.0.0"
description = "Desktop app usage time tracker with neon UI and gamification"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "pywin32>=306",
    "psutil>=5.9",
    "pynput>=1.7",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "pytest>=7.0",
]

[project.scripts]
apptrackr = "apptrackr.__main__:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["apptrackr*"]

[tool.setuptools.package-data]
apptrackr = ["data/schema.sql"]
